--- a/playbook.yml
+++ b/playbook.yml
@@ -8,9 +8,10 @@
   tasks:
     - name: Copy html web pages and content to apache directory
       copy:
-        src: "{{item}}"
+        src: "{{ item }}"
         dest: /var/www/html/
-        with_fileglob: '*.html'
+        with_fileglob: 
+          - /*.html
     - name: Copy html web pages and content to apache directory
       copy:
         src: css/
