--- a/playbook.yml
+++ b/playbook.yml
@@ -10,7 +10,7 @@
       copy:
         src: "{{ item }}"
         dest: /var/www/html/
-        with_fileglob: 
+        with_items: 
           - 6thgrade.html
     - name: Copy html web pages and content to apache directory
       copy:
