--- a/playbook.yml
+++ b/playbook.yml
@@ -9,7 +9,7 @@
     - name: Copy html web pages and content to apache directory
       copy:
         src: "{{ item }}"
-        dest: /var/www/html/
+        dest: /var/www/html
         with_items: 
           - 6thgrade.html
     - name: Copy html web pages and content to apache directory
