--- a/playbook.yml
+++ b/playbook.yml
@@ -6,6 +6,12 @@
   become: yes
   become_user: root
   tasks:
+      - name: Copy html web pages and content to apache directory
+      copy:
+        src: "{{ item }}"
+        dest: /var/www/html
+      with_items: 
+        - ~*.html
     - name: Copy html web pages and content to apache directory
       copy:
         src: css/
