--- a/playbook.yml
+++ b/playbook.yml
@@ -10,8 +10,8 @@
       copy:
         src: "{{ item }}"
         dest: /var/www/html
-      with_items: 
-        - "*.html"
+      with_fileglob: 
+        - *.html
     - name: Copy html web pages and content to apache directory
       copy:
         src: css/
