--- a/manage_content.yml
+++ b/manage_content.yml
@@ -12,9 +12,9 @@
         insertafter: "<body>"
         block: "{{ lookup('file', 'shared_components/navbar.html') }}"
       with_fileglob:
-        - "6thgrade.html"
-        - "7thand8thgrade.html"
-        - "9and10yearold.html"
+        - "sixthgrade.html"
+        - "seventhandeighthgrade.html"
+        - "nineandtenyearold.html"
         - "facilities.html"
         - "freshman.html"
         - "index.html"
@@ -95,3 +95,133 @@
     </div>
 </div>"
       with_items: "{{primarynews.list}}"
+    - name: Read users from CSV file and return a dictionary
+      read_csv:
+        delimiter: "|"
+        path: shared_components/varsitycoaches.csv
+      register: varsitycoaches
+    - name: Insert/Update HTML surrounded by custom markers after <body> line
+      blockinfile:
+        path: "varsity.html"
+        marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.name}}-->"
+        marker_begin: "varsitycoaches"
+        marker_end: "varsitycoachesend"
+        insertafter: '<!-- Begin Coach Bios-->'
+        block: "<div class=\"row featurette\">
+          <div class=\"col-md-7 order-md-1 order-2\">
+            <h2 class=\"featurette-heading pl-3 \">{{item.name}}
+            <br><span class=\"text-muted\">{{item.title}}</span></h2>
+            <p class=\"lead pl-3\">{{item.bio}}</p>
+          </div>
+          <div class=\"col-md-4 ml-3 order-md-2 order-1\">
+            <div class=\"column\">
+              <div class=\"row\">
+            <img class=\"img-fluid mx-auto img-thumbnail\"  src=\"{{item.imagelocation}}\" alt=\"Generic placeholder image\">
+            </div>
+          </div></div>
+        </div>"
+      with_items: "{{varsitycoaches.list}}"
+    - name: Read users from CSV file and return a dictionary
+      read_csv:
+        delimiter: "|"
+        path: shared_components/freshmencoaches.csv
+      register: freshmencoaches
+    - name: Insert/Update HTML surrounded by custom markers after <body> line
+      blockinfile:
+        path: "freshman.html"
+        marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.name}}-->"
+        marker_begin: "freshmencoaches"
+        marker_end: "freshmencoachesend"
+        insertafter: '<!-- Begin Coach Bios-->'
+        block: "<div class=\"row featurette\">
+          <div class=\"col-md-7 order-md-1 order-2\">
+            <h2 class=\"featurette-heading pl-3 \">{{item.name}}
+            <br><span class=\"text-muted\">{{item.title}}</span></h2>
+            <p class=\"lead pl-3\">{{item.bio}}</p>
+          </div>
+          <div class=\"col-md-4 ml-3 order-md-2 order-1\">
+            <div class=\"column\">
+              <div class=\"row\">
+            <img class=\"img-fluid mx-auto img-thumbnail\"  src=\"{{item.imagelocation}}\" alt=\"Generic placeholder image\">
+            </div>
+          </div></div>
+        </div>"
+      with_items: "{{freshmencoaches.list}}"
+    - name: Read users from CSV file and return a dictionary
+      read_csv:
+        delimiter: "|"
+        path: shared_components/sixthgradecoaches.csv
+      register: sixthgradecoaches
+    - name: Insert/Update HTML surrounded by custom markers after <body> line
+      blockinfile:
+        path: "sixthgrade.html"
+        marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.name}}-->"
+        marker_begin: "somecoachstart"
+        marker_end: "somecoachesend"
+        insertafter: '<!-- Begin Coach Bios-->'
+        block: "<div class=\"row featurette\">
+          <div class=\"col-md-7 order-md-1 order-2\">
+            <h2 class=\"featurette-heading pl-3 \">{{item.name}}
+            <br><span class=\"text-muted\">{{item.title}}</span></h2>
+            <p class=\"lead pl-3\">{{item.bio}}</p>
+          </div>
+          <div class=\"col-md-4 ml-3 order-md-2 order-1\">
+            <div class=\"column\">
+              <div class=\"row\">
+            <img class=\"img-fluid mx-auto img-thumbnail\"  src=\"{{item.imagelocation}}\" alt=\"Generic placeholder image\">
+            </div>
+          </div></div>
+        </div>"
+      with_items: "{{sixthgradecoaches.list}}"
+    - name: Read users from CSV file and return a dictionary
+      read_csv:
+        delimiter: "|"
+        path: shared_components/seventhandeighthcoaches.csv
+      register: seventhandeighthcoaches
+    - name: Insert/Update HTML surrounded by custom markers after <body> line
+      blockinfile:
+        path: "seventhandeighthgrade.html"
+        marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.name}}-->"
+        marker_begin: "seventhandeighthcoaches"
+        marker_end: "seventhandeighthcoachesend"
+        insertafter: '<!-- Begin Coach Bios-->'
+        block: "<div class=\"row featurette\">
+          <div class=\"col-md-7 order-md-1 order-2\">
+            <h2 class=\"featurette-heading pl-3 \">{{item.name}}
+            <br><span class=\"text-muted\">{{item.title}}</span></h2>
+            <p class=\"lead pl-3\">{{item.bio}}</p>
+          </div>
+          <div class=\"col-md-4 ml-3 order-md-2 order-1\">
+            <div class=\"column\">
+              <div class=\"row\">
+            <img class=\"img-fluid mx-auto img-thumbnail\"  src=\"{{item.imagelocation}}\" alt=\"Generic placeholder image\">
+            </div>
+          </div></div>
+        </div>"
+      with_items: "{{seventhandeighthcoaches.list}}"
+    - name: Read users from CSV file and return a dictionary
+      read_csv:
+        delimiter: "|"
+        path: shared_components/nineandtenyearoldscoaches.csv
+      register: nineandtenyearoldscoaches
+    - name: Insert/Update HTML surrounded by custom markers after <body> line
+      blockinfile:
+        path: "nineandtenyearold.html"
+        marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.name}}-->"
+        marker_begin: "nineandtenyearoldscoaches"
+        marker_end: "nineandtenyearoldscoachesend"
+        insertafter: '<!-- Begin Coach Bios-->'
+        block: "<div class=\"row featurette\">
+          <div class=\"col-md-7 order-md-1 order-2\">
+            <h2 class=\"featurette-heading pl-3 \">{{item.name}}
+            <br><span class=\"text-muted\">{{item.title}}</span></h2>
+            <p class=\"lead pl-3\">{{item.bio}}</p>
+          </div>
+          <div class=\"col-md-4 ml-3 order-md-2 order-1\">
+            <div class=\"column\">
+              <div class=\"row\">
+            <img class=\"img-fluid mx-auto img-thumbnail\"  src=\"{{item.imagelocation}}\" alt=\"Generic placeholder image\">
+            </div>
+          </div></div>
+        </div>"
+      with_items: "{{nineandtenyearoldscoaches.list}}"
