--- a/manage_content.yml
+++ b/manage_content.yml
@@ -33,6 +33,8 @@
       register: varsityschedule
       delegate_to: localhost
     - name: Insert/Update HTML surrounded by custom markers after <body> line
+      become: yes
+      become_user: root
       blockinfile:
         path: "/var/www/html/index.html"
         marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.Date}}-->"
@@ -46,6 +48,8 @@
 								</tr>"
       with_items: "{{varsityschedule.list}}"
     - name: Insert/Update HTML surrounded by custom markers after <body> line
+      become: yes
+      become_user: root
       blockinfile:
         path: "/var/www/html/index.html"
         marker: "<!-- {mark} ANSIBLE MANAGED BLOCK -->"
@@ -62,6 +66,8 @@
         insertafter: "<h2>The Present</h2>"
         block: " <p> {{ lookup('file', 'shared_components/thepresent.txt') }} </p>"
     - name: Insert/Update HTML surrounded by custom markers after <body> line
+      become: yes
+      become_user: root
       blockinfile:
         path: "/var/www/html/index.html"
         marker: "<!-- {mark} ANSIBLE MANAGED BLOCK -->"
@@ -75,6 +81,8 @@
       register: primarynews
       delegate_to: localhost
     - name: Insert/Update HTML surrounded by custom markers after <body> line
+      become: yes
+      become_user: root
       blockinfile:
         path: "/var/www/html/index.html"
         marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.Title}}-->"
@@ -107,6 +115,8 @@
       register: varsitycoaches
       delegate_to: localhost
     - name: Insert/Update HTML surrounded by custom markers after <body> line
+      become: yes
+      become_user: root
       blockinfile:
         path: "/var/www/html/varsity.html"
         marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.name}}-->"
@@ -134,6 +144,8 @@
       register: freshmencoaches
       delegate_to: localhost
     - name: Insert/Update HTML surrounded by custom markers after <body> line
+      become: yes
+      become_user: root
       blockinfile:
         path: "/var/www/html/freshman.html"
         marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.name}}-->"
@@ -161,6 +173,8 @@
       register: sixthgradecoaches
       delegate_to: localhost
     - name: Insert/Update HTML surrounded by custom markers after <body> line
+      become: yes
+      become_user: root
       blockinfile:
         path: "/var/www/html/sixthgrade.html"
         marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.name}}-->"
@@ -188,6 +202,8 @@
       register: seventhandeighthcoaches
       delegate_to: localhost
     - name: Insert/Update HTML surrounded by custom markers after <body> line
+      become: yes
+      become_user: root
       blockinfile:
         path: "/var/www/html/seventhandeighthgrade.html"
         marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.name}}-->"
@@ -215,6 +231,8 @@
       register: nineandtenyearoldscoaches
       delegate_to: localhost
     - name: Insert/Update HTML surrounded by custom markers after <body> line
+      become: yes
+      become_user: root
       blockinfile:
         path: "/var/www/html/nineandtenyearold.html"
         marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.name}}-->"
