--- a/manage_content.yml
+++ b/manage_content.yml
@@ -58,6 +58,8 @@
         insertafter: "<h2>The Past</h2>"
         block: " <p> {{ lookup('file', 'shared_components/thepast.txt') }} </p>"
     - name: Insert/Update HTML surrounded by custom markers after <body> line
+      become: yes
+      become_user: root
       blockinfile:
         path: "/var/www/html/index.html"
         marker: "<!-- {mark} ANSIBLE MANAGED BLOCK -->"
