--- a/manage_content.yml
+++ b/manage_content.yml
@@ -51,6 +51,21 @@
       become: yes
       become_user: root
       blockinfile:
+        path: "/var/www/html/varsity.html"
+        marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.Date}}-->"
+        marker_begin: "varsityschedule"
+        marker_end: "varsityscheduleend"
+        insertbefore: "</tbody>"
+        block: "<tr>
+									<td>{{item.Date}}</td>
+									<td>{{item.Time}}</td>
+									<td>{{item.Location}}</td>
+								</tr>"
+      with_items: "{{varsityschedule.list}}"
+    - name: Insert/Update HTML surrounded by custom markers after <body> line
+      become: yes
+      become_user: root
+      blockinfile:
         path: "/var/www/html/index.html"
         marker: "<!-- {mark} ANSIBLE MANAGED BLOCK -->"
         marker_begin: "thepast"
