--- a/manage_content.yml
+++ b/manage_content.yml
@@ -102,7 +102,7 @@
         marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.Date}}-->"
         marker_begin: "varsityscheduleonpage"
         marker_end: "varsityscheduleendonpage"
-        insertafter: "<div class="row mb-2 rowcenter">
+        insertafter: "<div class=\"row mb-2 rowcenter\">
 					<p><table style=\"color:black;\">
 						<tbody>
 						  <tr>
