--- a/manage_content.yml
+++ b/manage_content.yml
@@ -40,7 +40,7 @@
         marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.Date}}-->"
         marker_begin: "varsityschedule"
         marker_end: "varsityscheduleend"
-        insertbefore: "<!-- begin Varsity Schedule-->"
+        insertafter: "<!-- begin Varsity Schedule-->"
         block: "<tr>
 									<td>{{item.Date}}</td>
 									<td>{{item.Time}}</td>
