--- a/manage_content.yml
+++ b/manage_content.yml
@@ -51,21 +51,6 @@
       become: yes
       become_user: root
       blockinfile:
-        path: "/var/www/html/varsity.html"
-        marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.Date}}-->"
-        marker_begin: "varsityschedule"
-        marker_end: "varsityscheduleend"
-        insertafter: "<!-- begin Varsity Schedule -->"
-        block: "<tr>
-									<td>{{item.Date}}</td>
-									<td>{{item.Time}}</td>
-									<td>{{item.Location}}</td>
-								</tr>"
-      with_items: "{{varsityschedule.list}}"
-    - name: Insert/Update HTML surrounded by custom markers after <body> line
-      become: yes
-      become_user: root
-      blockinfile:
         path: "/var/www/html/schedule.html"
         marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.Date}}-->"
         marker_begin: "varsityschedule"
@@ -300,3 +285,38 @@
           </div></div>
         </div>"
       with_items: "{{nineandtenyearoldscoaches.list}}"
+    - name: Read users from CSV file and return a dictionary
+      read_csv:
+        path: shared_components/freshmen_schedule.csv
+      register: freshmenschedule
+      delegate_to: localhost
+    - name: Insert/Update HTML surrounded by custom markers after <body> line
+      become: yes
+      become_user: root
+      blockinfile:
+        path: "/var/www/html/freshman.html"
+        marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.Date}}-->"
+        marker_begin: "freshmenscheduleschedule"
+        marker_end: "freshmenschedulescheduleend"
+        insertafter: "<!-- begin Freshman Schedule-->"
+        block: "<tr>
+									<td>{{item.Date}}</td>
+									<td>{{item.Time}}</td>
+									<td>{{item.Location}}</td>
+								</tr>"
+      with_items: "{{freshmenschedule.list}}"
+    - name: Insert/Update HTML surrounded by custom markers after <body> line
+      become: yes
+      become_user: root
+      blockinfile:
+        path: "/var/www/html/schedule.html"
+        marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.Date}}-->"
+        marker_begin: "freshmenscheduleschedule"
+        marker_end: "freshmenschedulescheduleend"
+        insertafter: "<!-- begin Freshman Schedule-->"
+        block: "<tr>
+									<td>{{item.Date}}</td>
+									<td>{{item.Time}}</td>
+									<td>{{item.Location}}</td>
+								</tr>"
+      with_items: "{{freshmenschedule.list}}"
