--- a/playbook.yml
+++ b/playbook.yml
@@ -21,8 +21,13 @@
         - "schedule.html"
         - "seasonticket.html"
         - "sponsors.html"
+        - "self-service.html"
         - "swag.html"
         - "varsity.html"
+    - name: Copy html web pages and content to apache directory
+      copy:
+        src: shared_components/
+        dest: /var/www/html/shared_components/
     - name: Copy html web pages and content to apache directory
       copy:
         src: css/
