--- a/manage_content.yml
+++ b/manage_content.yml
@@ -324,11 +324,41 @@
       become: yes
       become_user: root
       blockinfile:
+        path: "/var/www/html/varsity.html"
+        marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.Date}}-->"
+        marker_begin: "freshmenscheduleschedule"
+        marker_end: "freshmenschedulescheduleend"
+        insertafter: "<!-- begin Freshman Schedule -->"
+        block: "<tr>
+									<td>{{item.Date}}</td>
+									<td>{{item.Time}}</td>
+									<td>{{item.Location}}</td>
+								</tr>"
+      with_items: "{{freshmenschedule.list}}"
+    - name: Insert/Update HTML surrounded by custom markers after <body> line
+      become: yes
+      become_user: root
+      blockinfile:
         path: "/var/www/html/schedule.html"
         marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.Date}}-->"
         marker_begin: "freshmenscheduleschedule"
         marker_end: "freshmenschedulescheduleend"
         insertafter: "<!-- begin Freshman Schedule -->"
+        block: "<tr>
+									<td>{{item.Date}}</td>
+									<td>{{item.Time}}</td>
+									<td>{{item.Location}}</td>
+								</tr>"
+      with_items: "{{freshmenschedule.list}}"
+    - name: Insert/Update HTML surrounded by custom markers after <body> line
+      become: yes
+      become_user: root
+      blockinfile:
+        path: "/var/www/html/schedule.html"
+        marker: "<!-- {mark} ANSIBLE MANAGED BLOCK {{item.Date}}-->"
+        marker_begin: "jvscheduleschedule"
+        marker_end: "jvschedulescheduleend"
+        insertafter: "<!-- begin JV Schedule -->"
         block: "<tr>
 									<td>{{item.Date}}</td>
 									<td>{{item.Time}}</td>
