--- a/manage_content.yml
+++ b/manage_content.yml
@@ -179,7 +179,7 @@
           <div class=\"col-md-4 ml-3 order-md-2 order-1\">
             <div class=\"column\">
               <div class=\"row\">
-            <img class=\"img-fluid mx-auto img-thumbnail\"  src=\"{{item.imagelocation}}\" alt=\"Generic placeholder image\">
+            <img class=\"img-fluid mx-auto img-thumbnail\"  style=\"max-width=225px; max-height=225px;\" src=\"{{item.imagelocation}}\" alt=\"Generic placeholder image\">
             </div>
           </div></div>
         </div>"
@@ -208,7 +208,7 @@
           <div class=\"col-md-4 ml-3 order-md-2 order-1\">
             <div class=\"column\">
               <div class=\"row\">
-            <img class=\"img-fluid mx-auto img-thumbnail\"  src=\"{{item.imagelocation}}\" alt=\"Generic placeholder image\">
+            <img class=\"img-fluid mx-auto img-thumbnail\"  style=\"max-width=225px; max-height=225px;\" src=\"{{item.imagelocation}}\" alt=\"Generic placeholder image\">
             </div>
           </div></div>
         </div>"
@@ -237,7 +237,7 @@
           <div class=\"col-md-4 ml-3 order-md-2 order-1\">
             <div class=\"column\">
               <div class=\"row\">
-            <img class=\"img-fluid mx-auto img-thumbnail\"  src=\"{{item.imagelocation}}\" alt=\"Generic placeholder image\">
+            <img class=\"img-fluid mx-auto img-thumbnail\" style=\"max-width=225px; max-height=225px;\"  src=\"{{item.imagelocation}}\" alt=\"Generic placeholder image\">
             </div>
           </div></div>
         </div>"
@@ -266,7 +266,7 @@
           <div class=\"col-md-4 ml-3 order-md-2 order-1\">
             <div class=\"column\">
               <div class=\"row\">
-            <img class=\"img-fluid mx-auto img-thumbnail\"  src=\"{{item.imagelocation}}\" alt=\"Generic placeholder image\">
+            <img class=\"img-fluid mx-auto img-thumbnail\"  style=\"max-width=225px; max-height=225px;\" src=\"{{item.imagelocation}}\" alt=\"Generic placeholder image\">
             </div>
           </div></div>
         </div>"
@@ -295,7 +295,7 @@
           <div class=\"col-md-4 ml-3 order-md-2 order-1\">
             <div class=\"column\">
               <div class=\"row\">
-            <img class=\"img-fluid mx-auto img-thumbnail\"  src=\"{{item.imagelocation}}\" alt=\"Generic placeholder image\">
+            <img class=\"img-fluid mx-auto img-thumbnail\"  style=\"max-width=225px; max-height=225px;\" src=\"{{item.imagelocation}}\" alt=\"Generic placeholder image\">
             </div>
           </div></div>
         </div>"
